--- a/m2d2.html
+++ b/m2d2.html
@@ -61,54 +61,9 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
             - The album duration
             - etc
          */
-            body{
-                background-color: rgb(31, 31, 31);
-            }
-			.album-container {
-                height: 100%;
-			}
-            .worst-container{
-                max-height: 50%;
-            }
-            .favorite-album-container {
-				width: 25%;
-			}
-			.album-cover {
-                width:100%;
-                height: auto;
-			}
-			.album-title {
-			}
-			.album-authors {
-			} /*group/singer/dj*/
-			.album-genre {
-			}
-			.album-duration {
-			}
-			.bgprimary {
-			}
-			.album-Tracklist {
-			}
-            .section{
-                margin:1ch;
-            }
-            .tapestry{
-                width:100vw;
-                height: 100vw;
-            }
-            .tapestry-cell{
-                width:20%;
-                height:20%;
-                max-width: 20%;
-                max-height: 20%;
-            }
-            .btn-primary{
-                background-color:rgb(20, 20, 20);
-            }
-            .best-and-worst{
-                height: fit-content;
-            }
-		</style>
+        </style>
+        <link rel="stylesheet" href="m2-d2.css">
+        <link rel="stylesheet" href="M2-D9.css">
 	</head>
 	<body>
 		<!-- EXERCISE 2 
