--- a/m2d2.html
+++ b/m2d2.html
@@ -369,12 +369,36 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
                     my first metal albums were lent to me by a dear friend during high school and are all on this page
                     i do not have a very strong musical taste but i have a preference towards rock and metal.
             </div>
+
+
+            <div class="container mb-5 my-4 mx-0 trackList">
+                <div class="row track p-0 m-0">
+                    <div class="col col-1 my-1 track-number">#</div>
+                    <div class="col col-9 my-1 title">title</div>
+                    <div class="col col-12 my-1 col-md-2 duration">duration</div>
+
+                    <div class="col col-1 my-1 track-number">1</div>
+                    <div class="col col-9 my-1 title">epic furor</div>
+                    <div class="col col-12 my-1 col-md-2 duration">1:15</div>
+
+                    <div class="col col-1 my-1 track-number">2</div>
+                    <div class="col col-9 my-1 title">Emerald sword</div>
+                    <div class="col col-12 my-1 col-md-2 duration">4:21</div>
+
+                    <div class="col col-1 my-1 track-number">2</div>
+                    <div class="col col-9 my-1 title">Emerald sword</div>
+                    <div class="col col-12 my-1 col-md-2 duration">4:21</div>
+                </div>
+            </div>
+
+
+
 		<!-- OLD EXERCISE 7
             Just covers!
             Create a tapestry of album pictures. Every album picture must be "square" (use CSS to do that).
             Put at least 20 covers (also repeated) to have a nice effect and see how Bootstrap handles it.
         -->
-            <div id="tapestry" class="tapestry">
+            <div id="tapestry" class="d-flex flex-wrap tapestry">
                 <img class="tapestry-cell" src="images/Europe-the_final_countdown.jpg"/>
                 <img class="tapestry-cell" src="images/poo.jpg">
                 <img class="tapestry-cell" src="images/Rhapsody_symphony_of_the_enchanted_lands.jpg"/>
@@ -403,12 +427,6 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
                 <img class="tapestry-cell" src="images/SonataArctica_Ecliptica.jpg"/>
                 <img class="tapestry-cell" src="images/Europe-the_final_countdown.jpg"/>
 
-
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col col-1 track-number"></div>
-                </div>
 
             </div>
 
