--- a/m2d2.html
+++ b/m2d2.html
@@ -48,7 +48,8 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
 			src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
 			integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
 			crossorigin="anonymous"
-		></script>
+        ></script>
+        <script src="m2d9.js"></script>
 		<style>
 			/* EXERCISE 1
             For all Albums we'd like to have a consistent style.
@@ -370,27 +371,31 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
                     i do not have a very strong musical taste but i have a preference towards rock and metal.
             </div>
 
-
-            <div class="container mb-5 my-4 mx-0 trackList">
+            <span>
+            <div class="container-fluid mb-5 my-4 mx-0 trackList">
                 <div class="row track p-0 m-0">
                     <div class="col col-1 my-1 track-number">#</div>
-                    <div class="col col-9 my-1 title">title</div>
+                    <div class="col col-7 my-1 title">title</div>
+                    <div class="col col-12 my-1 col-md-2 btn btn-danger">delete</div>
                     <div class="col col-12 my-1 col-md-2 duration">duration</div>
 
                     <div class="col col-1 my-1 track-number">1</div>
-                    <div class="col col-9 my-1 title">epic furor</div>
+                    <div class="col col-7 my-1 title">epic furor</div>
+                    <div class="col col-12 my-1 col-md-2 btn btn-danger">delete</div>
                     <div class="col col-12 my-1 col-md-2 duration">1:15</div>
 
                     <div class="col col-1 my-1 track-number">2</div>
-                    <div class="col col-9 my-1 title">Emerald sword</div>
+                    <div class="col col-7 my-1 title">Emerald sword</div>
+                    <div class="col col-12 my-1 col-md-2 btn btn-danger">delete</div>
                     <div class="col col-12 my-1 col-md-2 duration">4:21</div>
 
                     <div class="col col-1 my-1 track-number">2</div>
-                    <div class="col col-9 my-1 title">Emerald sword</div>
+                    <div class="col col-7 my-1 title">Emerald sword</div>
+                    <div class="col col-12 my-1 col-md-2 btn btn-danger">delete</div>
                     <div class="col col-12 my-1 col-md-2 duration">4:21</div>
                 </div>
             </div>
-
+        </span>
 
 
 		<!-- OLD EXERCISE 7
@@ -398,7 +403,7 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
             Create a tapestry of album pictures. Every album picture must be "square" (use CSS to do that).
             Put at least 20 covers (also repeated) to have a nice effect and see how Bootstrap handles it.
         -->
-            <div id="tapestry" class="d-flex flex-wrap tapestry">
+            <!--div id="tapestry" class="d-flex flex-wrap tapestry">
                 <img class="tapestry-cell" src="images/Europe-the_final_countdown.jpg"/>
                 <img class="tapestry-cell" src="images/poo.jpg">
                 <img class="tapestry-cell" src="images/Rhapsody_symphony_of_the_enchanted_lands.jpg"/>
@@ -428,7 +433,7 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
                 <img class="tapestry-cell" src="images/Europe-the_final_countdown.jpg"/>
 
 
-            </div>
+            </div-->
 
 
 		<!-- OLD EXERCISE 8
