--- a/m2d2.html
+++ b/m2d2.html
@@ -378,17 +378,20 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
                     <div class="col col-7 my-1 title">title</div>
                     <div class="col col-12 my-1 col-md-2 btn btn-danger">delete</div>
                     <div class="col col-12 my-1 col-md-2 duration">duration</div>
-
+                </div>
+                <div class="row track p-0 m-0">
                     <div class="col col-1 my-1 track-number">1</div>
                     <div class="col col-7 my-1 title">epic furor</div>
                     <div class="col col-12 my-1 col-md-2 btn btn-danger">delete</div>
                     <div class="col col-12 my-1 col-md-2 duration">1:15</div>
-
+                </div>
+                <div class="row track p-0 m-0">
                     <div class="col col-1 my-1 track-number">2</div>
                     <div class="col col-7 my-1 title">Emerald sword</div>
                     <div class="col col-12 my-1 col-md-2 btn btn-danger">delete</div>
                     <div class="col col-12 my-1 col-md-2 duration">4:21</div>
-
+                </div>
+                <div class="row track p-0 m-0">
                     <div class="col col-1 my-1 track-number">2</div>
                     <div class="col col-7 my-1 title">Emerald sword</div>
                     <div class="col col-12 my-1 col-md-2 btn btn-danger">delete</div>
